k8s/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: airlines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:8.13
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pgadmin-servers
          mountPath: /pgadmin4/servers.json
          subPath: servers.json
        resources:
          requests:
            memory: "64Mi"
            cpu: "25m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: pgadmin-servers
        configMap:
          name: pgadmin-servers
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: airlines
spec:
  selector:
    app: pgadmin
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
