k8s/postgres-user.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-user
  namespace: airlines
spec:
  serviceName: "postgres-user"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        resources:
           requests:
             memory: "128Mi"
             cpu: "50m"
           limits:
             memory: "512Mi"
             cpu: "200m"
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      - name: postgres-exporter
        image: prometheuscommunity/postgres-exporter
        ports:
        - containerPort: 9187
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
            cpu: "50m"
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: airlines
spec:
  clusterIP: None
  selector:
    app: postgres-user
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  - name: metrics
    port: 9187
    targetPort: 9187
