k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: airlines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: user-service
      containers:
      - name: user-service
        image: user-service:latest
        imagePullPolicy: IfNotPresent
        command: ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "10m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: airlines
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
  - name: http
    port: 8000
    targetPort: 8000
